style/index.css
* {
  box-sizing: border-box;
}
html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  overflow: hidden;
}
body {
  display: flex;
  font-family: "Segoe UI", Helvetica, sans-serif;
  color: white;
  font-size: 16px;
}
button,
input {
  font: inherit;
}
canvas {
  width: 100%;
  height: 100%;
  background-color: black;
  outline: none;
}
input[type="number"] {
  color: white;
  background-color: transparent;
  border: 2px solid white;
  padding: 10px;
  text-align: center;
  width: 120px;
}
.switch {
  display: flex;
  border-radius: 40px;
  border: 1px solid hsl(0, 0%, 20%);
  background-color: black;
}
.switch-label {
  flex: 1;
  cursor: pointer;
}
.switch-label span {
  display: block;
  padding: 10px;
  text-align: center;
}
.switch-label input:checked + span {
  background-color: white;
  color: black;
  border-radius: 40px;
}
.switch-label input {
  display: none;
}
button {
  color: white;
  background-color: transparent;
  border: 2px solid white;
  padding: 10px 20px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  border-radius: 30px;
}
.inputs {
  position: absolute;
  width: 300px;
  height: 100%;
  padding: 30px;
  z-index: 100;
  background-color: hsla(0, 0%, 0%, 0.3);
}
.inputs-background {
  -webkit-backdrop-filter: blur(
    5px
  ); /* Use for Safari 9+, Edge 17+ (not a mistake) and iOS Safari 9.2+ */
  backdrop-filter: blur(5px); /* Supported in Chrome 76 */

  content: "";
  display: flex;
  z-index: 1;
  top: 0;
  position: absolute;
  width: 300px;
  height: 100%;
}
.inputs h3 {
  margin-top: 0;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 2px;
}
.inputs-row {
  z-index: 1000;
  display: flex;
  flex-direction: column;
}
.inputs-row + .inputs-row {
  padding-top: 30px;
}
#active-frame-input {
  margin-top: 30px;
  -webkit-appearance: none;
  width: 100%;
  height: 4px;
  background-color: white;
  outline: none;
  border-radius: 10px;
}
#active-frame-input::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  background-color: white;
  cursor: pointer;
}
input[type=text] {
  color: white;
  background-color: transparent;
  border: 2px solid white;
  padding: 10px 20px;
  text-align: center;
  outline: none;
}
.input-button-group {
  flex: 1;
  display: flex;
}
.input-button-group input {
  width: 0;
  flex: 1;
}
.input-button-group button {
 border-left: none; 
}

#segment-id-button {
  padding: 0;
  display: flex;
  outline: none;
  font-weight: normal;
  position: relative;
  border-radius: 40px;
  background-color: black;
}

#segment-id-button span {
  display: flex;
  width: 30px;
  text-align: center;
}

#segment-id-input {
  border: none;
  flex: 1;
  width: 0;
  text-align: left;
}

.dropdown {
  max-height: 300px;
  overflow-y: auto;
  display: none;
  background-color: black;
  flex-direction: column;
  position: absolute;
  border: 2px solid white;
  border-top: none;
  left: -2px;
  right: -2px;
  top: calc(100% + 12px);
  border: 1px solid hsl(0, 0%, 20%);
  border-radius: 4px;
  box-shadow: 0 0 12px 8px hsla(0, 0%, 0%, 1);
}

.dropdown button {
  border: none;
  color: white;
  padding: 10px;
  justify-content: flex-start;
  font-weight: normal;
  border-radius: 0;
  outline: none;
}

.dropdown button:hover {
  background-color: hsl(0, 0%, 20%);
}

.dropdown button + button {
  border-top: 1px solid hsl(0, 0%, 20%);
}

#laser-car {
  border-radius: 20px;
  border: 3px solid white;
  position: relative;
  width: 160px;
  height: 70px;
  align-self: center;
}

#laser-car label {
  cursor: pointer;
  position: absolute;
} 

#laser-car label input{
  display: none;
} 

#laser-car label span {
  display: block;
  position: absolute;
  font-weight: bold;
  font-size: 10px;
  text-transform: uppercase;
  background-color: black;
  margin-top: 4px;
  text-align: center;
  display: none;
}

#laser-car label .indicator {
  background-color: gray;
  width: 20px;
  height: 20px;
  border-radius: 50%;
}

#laser-car label input:checked ~ .indicator {
  background-color: hsl(100, 100%, 60%);
} 

#laser-car-top {
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

#laser-car-top .indicator {
  width: 30px !important;
  height: 30px !important;
}

#laser-car-front {
  left: 100%;
  top: 50%;
  transform: translate(-50%, -50%);
}

#laser-car-rear {
  left: 0%;
  top: 50%;
  transform: translate(-50%, -50%);
}

#laser-car-side-left {
  right: 10%;
  top: 0%;
  transform: translate(-50%, -50%);
}

#laser-car-side-right {
  right: 10%;
  top: 100%;
  transform: translate(-50%, -50%);
}

